--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
                 </div>
             </div>
         </nav>
+        
   </header>
+
+  <section>
+    <h1>This is the section part</h1>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
 </body>
 </html>
